# pocx

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_TESTING.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-mips.yml  ci.yml  docker-publish.yml  release.yml  test-android-release.yml  test-arm64.yml
pocx_address/: Cargo.toml  README.md
pocx_address/src/: crypto.rs  lib.rs
pocx_address/tests/: integration_tests.rs  property_tests.rs
pocx_aggregator/: Cargo.toml  README.md  aggregator_config.yaml
pocx_aggregator/migrations/2025-01-01-000000_create_submissions/: up.sql
pocx_aggregator/migrations/2025-06-01-000000_remove_base_target/: down.sql  up.sql
pocx_aggregator/src/: callback.rs  config.rs  control.rs  dashboard.html  dashboard.rs  db.rs  error.rs  lib.rs  logging.rs  main.rs  pool.rs  schema.rs  server.rs  stats.rs  time_bending.rs
pocx_aggregator/src/queue/: global_best_queue.rs  mod.rs  submission_queue.rs
pocx_gpu_plotter/: Cargo.toml  plan.md  test_plotter_compare.sh  test_plotter_compare_e3.sh  test_plotter_compare_x2.sh
pocx_gpu_plotter/fuzz/: Cargo.toml
pocx_gpu_plotter/fuzz/fuzz_targets/: fuzz_compression.rs  fuzz_poc_id_validation.rs
pocx_gpu_plotter/src/: buffer.rs  disk_writer.rs  lib.rs  main.rs  ocl.rs  perf_monitor.rs  plotter.rs  ring_scheduler.rs
pocx_gpu_plotter/src/ocl/: kernel.cl
pocx_gpu_plotter/tests/: 02_x2.sh  03_x1_e3.sh  04_x2_e2.sh  07_multipath.sh  14_cpu_multipath.sh  fuzz_tests.rs  integration_tests.rs  lib.sh  performance_tests.rs  property_tests.rs  run_all.sh
pocx_hashlib/: Cargo.toml  README.md  build.rs
pocx_hashlib/benches/: benches_batch_validation.rs  benches_noncegen.rs  benches_quality.rs
pocx_hashlib/src/: batch_validation.rs  buffer.rs  error.rs  lib.rs  noncegen_128.rs  noncegen_256.rs  noncegen_32.rs  noncegen_512.rs  noncegen_batch_128.rs  noncegen_batch_256.rs  noncegen_batch_32.rs  noncegen_batch_512.rs  noncegen_batch_neon.rs  noncegen_common.rs  noncegen_neon.rs  quality_128.rs  quality_256.rs  quality_32.rs  quality_512.rs  quality_neon.rs  shabal256.rs  shabal256_avx.rs  shabal256_avx2.rs  shabal256_avx512.rs  shabal256_lite_avx.rs  shabal256_lite_avx2.rs  shabal256_lite_avx512.rs  shabal256_lite_neon.rs  shabal256_lite_sse2.rs  shabal256_neon.rs  shabal256_sse2.rs
pocx_hashlib/tests/: fuzz_tests.rs  integration_tests.rs  property_tests.rs
pocx_miner/: Cargo.toml  README.md  miner_config.yaml
pocx_miner/benches/: compression_benchmark.rs
pocx_miner/src/: buffer.rs  callback.rs  compression.rs  config.rs  control.rs  hasher.rs  lib.rs  logger.rs  main.rs  miner.rs  ocl.rs  plots.rs  request.rs  shutdown.rs  utils.rs
pocx_miner/src/com/: api.rs  mod.rs  protocol_client.rs
pocx_miner/src/future/: interval.rs  mod.rs  prio_retry.rs
pocx_miner/tests/: integration_tests.rs  property_tests.rs
pocx_mockchain/: Cargo.toml  README.md  mockchain_config.toml
pocx_mockchain/migrations/2019-04-11-182847_init/: down.sql  up.sql
pocx_mockchain/src/: cache.rs  config.rs  db.rs  json_rpc_handler.rs  main.rs  mining_info.rs  models.rs  schema.rs
pocx_plotfile/: Cargo.toml  README.md
pocx_plotfile/src/: buffer.rs  lib.rs  utils.rs
pocx_plotfile/tests/: fuzz_tests.rs  integration_tests.rs  property_tests.rs
pocx_plotter/: Cargo.toml
pocx_plotter/src/: buffer.rs  compressor.rs  cpu_hasher.rs  disk_writer.rs  error.rs  gpu_hasher.rs  lib.rs  main.rs  ocl.rs  plotter.rs  utils.rs  xpu_scheduler.rs
pocx_plotter/src/ocl/: kernel.cl
pocx_plotter/tests/: fuzz_tests.rs  integration_tests.rs  performance_tests.rs  property_tests.rs
pocx_plotter_v2/: Cargo.toml  README.md  test_plotter_compare.sh
pocx_plotter_v2/docs/: pipeline.html
pocx_plotter_v2/fuzz/fuzz_targets/: fuzz_buffer_allocation.rs  fuzz_seed_validation.rs
pocx_plotter_v2/src/: cpu_compressor.rs  cpu_hasher.rs  cpu_scheduler.rs  disk_writer.rs  error.rs  lib.rs  main.rs  ocl.rs  plotter.rs  ring_scheduler.rs  utils.rs
pocx_plotter_v2/src/ocl/: kernel.cl
pocx_plotter_v2/tests/: 01_x1_baseline.sh  05_x1_e5.sh  06_double_buffer.sh  08_multipath_x2_e2.sh  09_multifile.sh  10_multipath_multifile.sh  11_cpu_x1.sh  12_cpu_x2.sh  13_cpu_e3.sh  15_cpu_vs_gpu.sh  fuzz_tests.rs  integration_tests.rs  lib.sh  performance_tests.rs  property_tests.proptest-regressions  property_tests.rs  run_all.sh
pocx_protocol/: Cargo.toml  README.md
pocx_protocol/src/: client.rs  config.rs  errors.rs  lib.rs  server.rs  types.rs
pocx_protocol/src/protocol/: client.rs  errors.rs  mod.rs  server.rs  types.rs
pocx_verifier/: Cargo.toml  README.md
pocx_verifier/src/: main.rs  plotcheck.rs
pocx_verifier/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
tests/issue_48/: repro.sh
