[workspace]
members = [
    "pocx_address",
    "pocx_aggregator",
    "pocx_hashlib",
    "pocx_miner",
    "pocx_mockchain",
    "pocx_plotfile",
    "pocx_plotter",
    "pocx_protocol",
    "pocx_verifier",
]

resolver = "2"

# Shared workspace dependencies - latest versions unified
[workspace.dependencies]
# Core utilities
hex = "0.4.3"
bs58 = { version = "0.5.1", features = ["check"] }
bech32 = "0.11"
secp256k1 = { version = "0.31", features = ["rand", "hashes"] }
ripemd = "0.1"
rand = { version = "0.9.2", features = ["small_rng", "std"] }
cfg-if = "1.0"
libc = "0.2"
page_size = "0.6"
num_cpus = "1.16"

# CLI and UI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Additional common deps
byteorder = "1.5"
sha2 = "0.10"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
filetime = "0.2"
hostname = "0.4"
axum = "0.8"
toml = "0.9"
diesel = { version = "2.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.3"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
bytesize = "2.1"
log = "0.4"
num-traits = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
log4rs = { version = "1.4", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
url = { version = "2.5", features = ["serde"] }
winapi = { version = "0.3", features = ["std", "fileapi", "securitybaseapi", "errhandlingapi", "handleapi", "processthreadsapi", "winbase"] }

# JSON-RPC protocol dependencies
async-trait = "0.1"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
urlencoding = "2.1"
base64 = "0.22"

# Development dependencies
tempfile = "3.23"
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.8"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
mockito = "1.0"

# Shared profile settings
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true

# For faster builds during development
[profile.dev.package."*"]
opt-level = 2