[package]
name = "pocx_address"
version = "1.0.0-rc.10"
authors = ["Proof of Capacity Consortium"]
description = "Address encoding/decoding library for PoCX with Base58Check and Bech32 support"
edition = "2021"
rust-version = "1.91.0"
license = "MIT"
homepage = "https://bitcoin-pocx.org/"
repository = "https://github.com/PoC-Consortium/pocx"
documentation = "https://github.com/PoC-Consortium/pocx/wiki"
keywords = ["cryptocurrency", "address", "base58", "bech32", "poc"]
categories = ["cryptography"]

[dependencies]
bs58 = { workspace = true }
bech32 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }