[package]
name = "pocx_hashlib"
version = "1.0.0-rc.9"
license = "MIT"
authors = [
    "Proof of Capacity Consortium",
]
description = """
Universal cryptographic library for Proof-of-Capacity consensus mechanism.
Includes SIMD-optimized Shabal256 hashing and nonce generation with support for SSE2, AVX, AVX2, and AVX512.
"""
homepage = "https://bitcoin-pocx.org/"
repository = "https://github.com/PoC-Consortium/pocx"
documentation = "https://github.com/PoC-Consortium/pocx/wiki"
categories = ["cryptography", "algorithms", "no-std"]
keywords = ["poc", "proof-of-capacity", "shabal256", "simd", "cryptocurrency"]
readme = "README.md"
edition = "2021"
rust-version = "1.91.0"

[dependencies]
hex = { workspace = true }
page_size = { workspace = true }


[dev-dependencies]
# Benchmarking
criterion = { workspace = true }
sha2 = "0.10"
libc = { workspace = true }

# Testing infrastructure
proptest = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
arbitrary = { workspace = true }

[features]
default = []

[[bench]]
name = "benches_noncegen"
harness = false

[[bench]]
name = "benches_quality"
harness = false

[[bench]]
name = "benches_batch_validation"
harness = false


