[package]
name = "pocx_mockchain"
version = "1.0.0"
license = "MIT"
authors = ["Proof of Capacity Consortium"]
description = "Mock blockchain simulator for testing PoCX miners and Proof-of-Capacity applications"
edition = "2021"
rust-version = "1.91.0"

[[bin]]
name = "pocx_mockchain"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
r2d2 = { workspace = true }
dotenvy = { workspace = true }
num-traits = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
pocx_hashlib = { path = "../pocx_hashlib" }
pocx_address = { path = "../pocx_address" }
pocx_protocol = { path = "../pocx_protocol" }
async-trait = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
bytesize = { workspace = true }

[features]
simd = []
opencl = []