[package]
name = "pocx_plotfile"
version = "1.0.0-rc.5"
license = "MIT"
authors = [
    "Proof of Capacity Consortium",
]
description = "A high-performance, safe, and cross-platform library for reading and writing PoC cryptocurrency plot files"
homepage = "https://bitcoin-pocx.org/"
repository = "https://github.com/PoC-Consortium/pocx"
documentation = "https://github.com/PoC-Consortium/pocx/wiki"
keywords = ["poc", "cryptocurrency", "mining", "plotfile", "shabal256"]
categories = ["cryptography", "filesystem", "parsing"]
readme = "README.md"
edition = "2021"
rust-version = "1.91.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex = { workspace = true }
pocx_address = { version = "1.0.0-rc.5", path = "../pocx_address" }
filetime = { workspace = true }
cfg-if = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
page_size = { workspace = true }

[dev-dependencies]
# Testing infrastructure
tempfile = { workspace = true }
proptest = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
arbitrary = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "fileapi", "securitybaseapi", "errhandlingapi", "handleapi", "processthreadsapi", "winbase"] }

[target.'cfg(not(windows))'.dependencies]
fs2 = "0.4"

[features]
opencl = []
simd = []
