[package]
name = "pocx_plotter"
version = "1.0.0-rc.5"
license = "MIT"
authors = [
    "Proof of Capacity Consortium",
]
description = """
Universal Proof-of-Capacity plotting tool for any PoC cryptocurrency.
CPU and GPU acceleration with OpenCL, SIMD optimizations, and memory-mapped I/O.
"""
documentation = "https://docs.rs/pocx_plotter"
keywords = ["poc", "proof-of-capacity", "plotter", "rust", "cryptocurrency"]
categories = ["cryptography", "algorithms", "command-line-utilities"]
readme = "README.md"
edition = "2021"
rust-version = "1.91.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "pocx_plotter"
path = "src/lib.rs"

[[bin]]
name = "pocx_plotter"
path = "src/main.rs"

[features]
default = ["simd", "opencl"]
opencl = ["opencl3"]
simd = []

[dependencies]
crossbeam-channel = { workspace = true }
opencl3 = { version = "0.10", features = ["dynamic"], optional = true }
clap = { workspace = true }
sysinfo = "0.32"
num_cpus = { workspace = true }
cfg-if = { workspace = true }
indicatif = { workspace = true }
bytesize = "2.0.1"
libc = { workspace = true }
rayon = "1.10"
core_affinity = "0.8"
fs2 = "0.4"
page_size = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
pocx_hashlib = { version = "1.0.0-rc.5", path = "../pocx_hashlib" }
pocx_plotfile = { version = "1.0.0-rc.5", path = "../pocx_plotfile" }
pocx_address = { version = "1.0.0-rc.5", path = "../pocx_address" }

[target.'cfg(linux)'.dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std","fileapi","securitybaseapi"] }

# Profiles moved to workspace root

[dev-dependencies]
sha2 = { workspace = true }
tempfile = "3.8"
proptest = "1.4"
quickcheck = "1.0"
