[package]
name = "pocx_protocol"
version = "1.0.0-rc.5"
license = "MIT"
authors = [
    "Proof of Capacity Consortium",
]
description = "JSON-RPC protocol implementation for PoCX mining"
keywords = ["poc", "cryptocurrency", "mining", "jsonrpc", "protocol"]
categories = ["cryptography", "network-programming", "web-programming"]
readme = "README.md"
edition = "2021"
rust-version = "1.91.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tokio-stream = "0.1"