[package]
name = "pocx_verifier"
version = "1.0.0-rc.8"
license = "MIT"
authors = [
    "Proof of Capacity Consortium",
]
description = "Plot file verification tool for validating PoC cryptocurrency plot files"
homepage = "https://bitcoin-pocx.org/"
repository = "https://github.com/PoC-Consortium/pocx"
documentation = "https://github.com/PoC-Consortium/pocx/wiki"
keywords = ["poc", "cryptocurrency", "mining", "verification", "plotfile"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"
edition = "2021"
rust-version = "1.91.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
rand = { workspace = true }
indicatif = { workspace = true }
hex = { workspace = true }
pocx_hashlib = { version = "1.0.0-rc.8", path = "../pocx_hashlib" }
pocx_plotfile = { version = "1.0.0-rc.8", path = "../pocx_plotfile" }

[dev-dependencies]
